Fix line overflow in repo-item text

--- a/public/css/gitpop.css
+++ b/public/css/gitpop.css
@@ -20,6 +20,8 @@
   -moz-transition: all .2s ease;
   -o-transition: all .2s ease;
   transition: all .2s ease;
+
+  overflow-wrap: break-word;
 }
 
 .repo-list {
